--- a/store-frontend/src/components/css/style.css
+++ b/store-frontend/src/components/css/style.css
@@ -1,3 +1,18 @@
+.card-block {
+    min-height: 50px;
+    padding: 20px;
+    text-align: center;
+    color: #7634c2;
+    margin: 10px;
+}
+
+.car-img {
+    position: relative;
+    width: 100%;
+    height: 40%;
+    object-fit: cover;
+}
+
 #inputProduct{
     margin: 2rem;
     padding: 1rem;
