--- a/store-frontend/src/components/css/style.css
+++ b/store-frontend/src/components/css/style.css
@@ -1,15 +1,15 @@
-.card-block {
-    min-height: 50px;
-    padding: 20px;
-    text-align: center;
+.card {
+    height: 550px;
+    padding: 10px;
+    text-align: left;
     color: #7634c2;
     margin: 10px;
 }
 
-.car-img {
+.card-img-top {
     position: relative;
     width: 100%;
-    height: 40%;
+    height: 50%;
     object-fit: cover;
 }
 
